// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectView renders a loading indicator during the loading 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text xl semibold hideoverflow loading"
      >
        
      </div>
    </div>
    <div
      className="css-1bwpiip"
    >
      <div
        className="viewdescription"
      >
        <div
          className="text s regular loading viewdescription-text"
        >
          No description provided
        </div>
        <div
          className="css-dqccva"
        >
          <button
            className="button button--loading"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="css-1trk9rv"
            >
              <div
                className="button-container"
              >
                <div
                  className="loading button-loadingindicator"
                >
                  <div />
                  <div />
                  <div />
                </div>
                <div
                  className="text s semibold button-label"
                >
                  Edit
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow loading"
          >
            Semantic Resources
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular loading"
          >
            No semantic resource has been found on the project.
          </div>
        </div>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow loading"
          >
            Representations
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular loading"
          >
            No representation has been found on the project.
          </div>
        </div>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow loading"
          >
            Workflow
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular loading"
          >
            No workflow pages found
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders an error card for an error 1`] = `
<div
  className="card errorcard"
>
  <div
    className="css-1nc71gt"
  >
    <div
      className="errorcard-container"
    >
      <div
        className="css-kglogr"
      >
        <h1
          className="title-l"
        >
          An error has occurred
        </h1>
      </div>
      <p>
        Please contact the administrator to try to find a solution (code: 500)
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    className="css-1nc71gt"
  >
    <div
      className="errorcard-container"
    >
      <div
        className="css-kglogr"
      >
        <h1
          className="title-l"
        >
          The project is in an unsupported state: INITIAL__STATE
        </h1>
      </div>
      <p>
        Contact your administrator to find a suitable solution (code: 1001)
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project with activities 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text xl semibold hideoverflow"
      >
        Project
      </div>
    </div>
    <div
      className="css-1bwpiip"
    >
      <div
        className="viewdescription"
      >
        <div
          className="text s regular viewdescription-text"
        >
          No description provided
        </div>
        <div
          className="css-dqccva"
        >
          <button
            className="button button--default"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-1trk9rv"
            >
              <div
                className="button-container"
              >
                <div
                  className="loading button-loadingindicator"
                >
                  <div />
                  <div />
                  <div />
                </div>
                <div
                  className="text s semibold button-label"
                >
                  Edit
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Semantic Resources
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--singleline"
            >
              <div
                className="text s regular tile-maintext"
              >
                /model/model.ecore
              </div>
              <div
                className="text s regular"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Representations
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Class Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Activity Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Workflow
          </div>
        </div>
        <div
          className="tabbar"
        >
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="previous"
            onClick={[Function]}
          >
            <div
              className="text s semibold"
            >
              &lt;
            </div>
          </div>
          <div
            className="tabbar-tabs"
          >
            <div
              className="tab tab--selected"
              onClick={[Function]}
            >
              <div
                className="text m semibold hideoverflow"
              >
                page1
              </div>
            </div>
          </div>
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="next"
            onClick={[Function]}
          >
            <div
              className="text s semibold"
            >
              &gt;
            </div>
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular"
          >
            No sections found in the workflow.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project without activities 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text xl semibold hideoverflow"
      >
        Project
      </div>
    </div>
    <div
      className="css-1bwpiip"
    >
      <div
        className="viewdescription"
      >
        <div
          className="text s regular viewdescription-text"
        >
          No description provided
        </div>
        <div
          className="css-dqccva"
        >
          <button
            className="button button--default"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-1trk9rv"
            >
              <div
                className="button-container"
              >
                <div
                  className="loading button-loadingindicator"
                >
                  <div />
                  <div />
                  <div />
                </div>
                <div
                  className="text s semibold button-label"
                >
                  Edit
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Semantic Resources
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--singleline"
            >
              <div
                className="text s regular tile-maintext"
              >
                /model/model.ecore
              </div>
              <div
                className="text s regular"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Representations
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Class Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Activity Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Workflow
          </div>
        </div>
        <div
          className="tabbar"
        >
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="previous"
            onClick={[Function]}
          >
            <div
              className="text s semibold"
            >
              &lt;
            </div>
          </div>
          <div
            className="tabbar-tabs"
          >
            <div
              className="tab tab--selected"
              onClick={[Function]}
            >
              <div
                className="text m semibold hideoverflow"
              >
                page1
              </div>
            </div>
          </div>
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="next"
            onClick={[Function]}
          >
            <div
              className="text s semibold"
            >
              &gt;
            </div>
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular"
          >
            No sections found in the workflow.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project without any workflow 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text xl semibold hideoverflow"
      >
        Project
      </div>
    </div>
    <div
      className="css-1bwpiip"
    >
      <div
        className="viewdescription"
      >
        <div
          className="text s regular viewdescription-text"
        >
          No description provided
        </div>
        <div
          className="css-dqccva"
        >
          <button
            className="button button--default"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-1trk9rv"
            >
              <div
                className="button-container"
              >
                <div
                  className="loading button-loadingindicator"
                >
                  <div />
                  <div />
                  <div />
                </div>
                <div
                  className="text s semibold button-label"
                >
                  Edit
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Semantic Resources
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--singleline"
            >
              <div
                className="text s regular tile-maintext"
              >
                /model/model.ecore
              </div>
              <div
                className="text s regular"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Representations
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Class Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Activity Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Workflow
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular"
          >
            No workflow pages found
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProjectView renders the project without sections 1`] = `
<div
  className="projectview"
>
  <div
    className="card projectheadercard"
  >
    <div
      className="css-kglogr"
    >
      <div
        className="text xl semibold hideoverflow"
      >
        Project
      </div>
    </div>
    <div
      className="css-1bwpiip"
    >
      <div
        className="viewdescription"
      >
        <div
          className="text s regular viewdescription-text"
        >
          No description provided
        </div>
        <div
          className="css-dqccva"
        >
          <button
            className="button button--default"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="css-1trk9rv"
            >
              <div
                className="button-container"
              >
                <div
                  className="loading button-loadingindicator"
                >
                  <div />
                  <div />
                  <div />
                </div>
                <div
                  className="text s semibold button-label"
                >
                  Edit
                </div>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="projectview-main"
  >
    <div
      className="projectview-details"
    >
      <div
        className="card projectsemanticresourceslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Semantic Resources
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--singleline"
            >
              <div
                className="text s regular tile-maintext"
              >
                /model/model.ecore
              </div>
              <div
                className="text s regular"
              />
            </li>
          </div>
        </ul>
      </div>
      <div
        className="card projectrepresentationslistcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Representations
          </div>
        </div>
        <ul
          className="list list--highlighted"
        >
          <div
            className="css-u1f566"
          >
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Class Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
            <li
              className="tile tile--twoline"
            >
              <div>
                <div
                  className="text s regular tile-maintext"
                >
                  Activity Diagram
                </div>
                <div
                  className="text xs light tile-additionaltext"
                />
              </div>
            </li>
          </div>
        </ul>
      </div>
    </div>
    <div
      className="projectview-workflow"
    >
      <div
        className="card workflowcard"
      >
        <div
          className="css-kglogr"
        >
          <div
            className="text l semibold hideoverflow"
          >
            Workflow
          </div>
        </div>
        <div
          className="tabbar"
        >
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="previous"
            onClick={[Function]}
          >
            <div
              className="text s semibold"
            >
              &lt;
            </div>
          </div>
          <div
            className="tabbar-tabs"
          >
            <div
              className="tab tab--selected"
              onClick={[Function]}
            >
              <div
                className="text m semibold hideoverflow"
              >
                page1
              </div>
            </div>
          </div>
          <div
            className="tabbar-nav tabbar-nav--disabled"
            data-side="next"
            onClick={[Function]}
          >
            <div
              className="text s semibold"
            >
              &gt;
            </div>
          </div>
        </div>
        <div
          className="css-sfh1o5"
        >
          <div
            className="text s regular"
          >
            No sections found in the workflow.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
